--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,11 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "*.ipp": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "any": "cpp",
+        "strstream": "cpp",
+        "codecvt": "cpp",
+        "future": "cpp",
+        "cfenv": "cpp"
     }
 }
